--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -4,6 +4,10 @@ html {
     margin: 0;
 }
 
+body {
+ font-size: 1.6rem;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -12,3 +16,21 @@ a {
 img {
     width: 100%;
 }
+
+.wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 2400px;
+    margin: 0 auto;
+}
+
+.siteContainer {
+    margin-left: 70px;
+}
+
+h2 {
+    font-size: 4rem;
+    & span {
+        display: block;
+    }
+} 
