--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -6,7 +6,36 @@ html {
 
 body {
  font-size: 1.6rem;
+ font-family: 'Work Sans', sans-serif;
+ font-weight: 400;
+ line-height: 2;
 }
+
+
+p {
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 1.5px;
+    line-height: 1.4;
+    text-transform: uppercase;
+    margin:  0;
+    font-weight: 200;
+}
+
+h1 {
+    font-weight: 300;
+}
+
+h2 {
+    font-size: 4.5rem;
+    font-weight: 200;
+    & span {
+        display: block;
+    }
+} 
 
 a {
     color: inherit;
@@ -15,6 +44,18 @@ a {
 
 img {
     width: 100%;
+    height: auto;
+    display: block;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
+    margin: 0;
 }
 
 .wrapper {
@@ -24,13 +65,48 @@ img {
     margin: 0 auto;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 8% 0 4%
+}
+
 .siteContainer {
     margin-left: 70px;
 }
 
-h2 {
-    font-size: 4rem;
-    & span {
-        display: block;
+.gridTime {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 20px;
+}
+
+.button {
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    padding: 12px 15px;
+    text-transform: uppercase;
+    transition: all .1s ease-in-out;
+    font-size: 1.4rem;
+    font-family: 'Work Sans', sans-serif;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+        background-color: white;
+        color: black;
     }
-} 
+
+.imgUp {
+    position: relative;
+    z-index: 0;
+    transition: transform .3s ease-out
+}
+
+.imgUp:hover,
+.imgUp:focus {
+    transform: translateY(-10px);
+}
