--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -5,4 +5,5 @@ footer p {
     text-transform: uppercase;
     line-height: 1;
     font-family: 'Work Sans', sans-serif;
+    padding: 10px 0 30px 0;
 }
