--- a/styles/styles.css
+++ b/styles/styles.css
@@ -975,4 +975,5 @@ footer p {
   text-transform: uppercase;
   line-height: 1;
   font-family: 'Work Sans', sans-serif;
+  padding: 10px 0 30px 0;
 }
