--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -6,8 +6,10 @@ header {
 
 .heading {
     order: 1;
-    background: url(../assets/5DEDE4B4-ECF8-48E7-A2B5-7F65367B3830.jpeg);
-    background-repeat: no-repeat;
+    &Main {
+        background: url(../assets/5DEDE4B4-ECF8-48E7-A2B5-7F65367B3830.jpeg);
+        background-repeat: no-repeat; 
+    }
 }
 
 h1 {
@@ -36,3 +38,39 @@ h1 {
     }
 }
 
+
+// ABOUT
+
+.aboutImgContainer {
+    max-width: 530px;
+    margin-left: auto;
+    margin-top: 120px;
+}
+
+.headingAbout {
+    position: relative;
+}
+
+.aboutImg {
+    padding-top: 50px;
+}
+
+.aboutContainer {
+    position: absolute;
+    left: -48px;
+    top: 28%;
+}
+
+.greeting {
+     background: $primary;
+     width: 60%; 
+     margin: 48px 0px 0px 0px;
+     padding: 50px;
+     font-size: 1.6rem;
+     letter-spacing: 1px;
+     line-height: 2;
+     font-family: $work;
+     & p:first-of-type {
+         margin-bottom: 28px;
+     }
+}
