--- a/styles/sass/_sideNav.scss
+++ b/styles/sass/_sideNav.scss
@@ -6,26 +6,72 @@
     background-color: white;
 }
 
+.imdb {
+    font-size: 1.5rem;
+}
+
+
+
 .burgerContent {
         position: absolute;
-        width: 100%;
-        top: 23px;
+        max-height: 0;
+        width: 100vw;
+        top: 50px;
         z-index: 2;
         overflow: hidden;
-        transition: all 1s;
+        transition: all .5s;
+    }
+
+    .coverUp {
+        background-color: $primary;
+        position: absolute;
+        width: 100vw;
+        height: 0;
+        top: 0;
+        left: 50vw;
+
+        // height: 100px;
+        // opacity: 0;
+    }
+
+    .openTransition {
+        transition: 0.5s 0.3s all linear;
+    }
+
+    .closeTransition {
+        transition: 0.1s 0 all ease;
     }
 
     input#menu:checked ~ .burgerContent{
-        max-height: 250px;
+        max-height: 100vh;
+    }
+
+    input#menu:checked ~ .coverUp {
+        // width: 100vw;
+        height: 100px;
+        // opacity: 1;
+    }
+
+    body.navOpen {
+        height: 100vh;
+        overflow-y: hidden;
     }
 
     .topNav {
-        display: none;
+        // display: none;
+        z-index: 2;
         flex-direction: column;
-        padding: 0;
-        width: 90%;
+        padding: 20vh 0 0 0;
+        width: 100%;
+        height: 100vh;
         margin: 0;
-        background: rgba(255, 255, 255, .6);
+        background: $primary;
+        text-align: center;
+        font-family: Oswald;
+        font-weight: 300;
+        font-size: 2rem;
+        letter-spacing: 3px;
+        text-transform: uppercase;
     }
 
     nav {
@@ -36,12 +82,25 @@
         margin: 10px auto;
     }
 
+    .navIcons {
+        display: flex;
+        justify-content: space-between;
+        width: 90px;
+        margin: 0 auto;
+        font-size: 2.3rem;
+    }
+
+    .topNav a:hover,
+    .topNav a:focus {
+        color: white;
+    }
+
     input#menu {
         display: block;
         position: absolute;
         left: 0;
         top: 0;
-        z-index:4;
+        z-index:10000;
         height: 50px;
         width: 70px;
         opacity: 0;
@@ -49,32 +108,77 @@
     }
 
     .burgs {
+        position: relative;
         height: 50px;
         width: 100%;
         border-bottom: $border;
         border-right: $border;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // background-color: white;
+        z-index: 1000;
     }
 
     .burg {
         display: block;
-        z-index: 3;
+        position: absolute;
+        z-index: 6;
         background: #2c2c2c;
         height: 1px;
         width: 25px;
-        border-radius: 5px;
-        transition: transform .5s; 
-        margin-left: 30%; 
-        margin-top: 3.5px;
-        margin-bottom: 3.5px;
+        border-radius: 5px; 
+        left: 20px;
+        top: 15px;
+        transition: transform .5s;
+        // margin-left: 30%; 
+        // margin-top: 3.5px;
+        // margin-bottom: 3.5px;
     }
 
 
     .burg2 {
         width: 20px;
+        top: 23px;
     }
+
+    .burg3 {
+        top: 31px;
+    }
+
+    input#menu:checked ~ .burgs > div.burg1 {
+        // transform: translateY(8px);
+        animation: topLine 0.8s linear;
+        animation-fill-mode: forwards;
+    }
+
+    input#menu:checked ~ .burgs > div.burg2 {
+        transition: opacity 0.6s;
+        opacity: 0;
+        // transform: rotate(360deg);
+    }
+
+    input#menu:checked ~ .burgs > div.burg3 {
+        // transform: translateY(-8px);
+        animation: bottomLine 0.8s Linear;
+        animation-fill-mode: forwards;
+    }
+
+    input#menu:not(:checked) ~ .burgs > div.burg1 {
+        animation: topLineRev 0.8s linear;
+        animation-fill-mode: forwards;
+    }
+
+    input#menu:not(:checked) ~ .burgs > div.burg2 {
+        transition: opacity 2.2s;
+        opacity: 1;
+    }    
+
+    input#menu:not(:checked) ~ .burgs > div.burg3 {
+        animation: bottomLineRev 0.8s linear;
+        animation-fill-mode: forwards;
+    }
+
 
     .moreNav {
         height: 100%;
@@ -136,3 +240,46 @@
         border: none;
         font-size: 1.3rem;
     }
+
+    @keyframes topLine{
+        0% {}
+        45%{top:23px; transform:rotate(0deg)}
+        55%{top:23px; transform:rotate(0deg)}
+        100%{top:23px; transform:rotate(225deg)}
+    }
+
+    @keyframes topLineRev{
+        0% {top:23px; transform:rotate(225deg)}
+        15%{top:23px; transform: rotate(135deg);}
+        45%{top:23px; transform:rotate(0deg)}
+        55%{top:23px; transform:rotate(0deg)}
+        100%{top:15px; transform:rotate(0deg)}
+    }
+
+    @keyframes bottomLine{
+        0%{}
+        45%{top:23px; transform:rotate(0deg)}
+        55%{top:23px; transform:rotate(0deg)}
+        100%{top:23px; transform: rotate(135deg)}
+    }
+
+    @keyframes bottomLineRev{
+        0%{top:23px; transform: rotate(135deg)}
+        15%{top:23px; transform: rotate(135deg);}
+        45%{top:23px; transform:rotate(0deg)}
+        55%{top:23px; transform:rotate(0deg)}
+        100%{top:31px; transform: rotate(0deg)}
+    }
+
+    //   input#menu:checked ~ .burgs > div.burg1 {
+    //     transform: translateY(8px);
+    // }
+
+    // input#menu:checked ~ .burgs > div.burg2 {
+    //     visibility: hidden;
+    //     transform: rotate(360deg);
+    // }
+
+    // input#menu:checked ~ .burgs > div.burg3 {
+    //     transform: translateY(-8px);
+    // }
