--- a/styles/sass/_sideNav.scss
+++ b/styles/sass/_sideNav.scss
@@ -4,6 +4,7 @@
     position: fixed;
     font-size: 1.3rem;
     background-color: white;
+    z-index: 100;
 }
 
 .imdb {
@@ -20,6 +21,7 @@
         z-index: 2;
         overflow: hidden;
         transition: all .5s;
+        z-index: 100;
     }
 
     .coverUp {
@@ -28,18 +30,17 @@
         width: 100vw;
         height: 0;
         top: 0;
-        left: 50vw;
-
+        left: 70px;
         // height: 100px;
         // opacity: 0;
     }
 
     .openTransition {
-        transition: 0.5s 0.3s all linear;
+        transition: 0.2s 0.4s all linear;
     }
 
     .closeTransition {
-        transition: 0.1s 0 all ease;
+        transition: 0.01s 0 all linear;
     }
 
     input#menu:checked ~ .burgerContent{
@@ -48,7 +49,7 @@
 
     input#menu:checked ~ .coverUp {
         // width: 100vw;
-        height: 100px;
+        height: 70px;
         // opacity: 1;
     }
 
@@ -59,7 +60,7 @@
 
     .topNav {
         // display: none;
-        z-index: 2;
+        z-index: 100;
         flex-direction: column;
         padding: 20vh 0 0 0;
         width: 100%;
@@ -76,6 +77,7 @@
 
     nav {
         width: 100%;
+        z-index: 100;
     }
 
     .topNav li {
